# razor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  README.md
bbr/: Makefile  bbr_bandwidth_sample.c  bbr_bandwidth_sample.h  bbr_common.c  bbr_common.h  bbr_controller.c  bbr_controller.h  bbr_feedback_adpater.c  bbr_feedback_adpater.h  bbr_loss_rate_filter.c  bbr_loss_rate_filter.h  bbr_pacer.c  bbr_pacer.h  bbr_receiver.c  bbr_receiver.h  bbr_rtt_stats.c  bbr_rtt_stats.h  bbr_sender.c  bbr_sender.h  bbr_transfer_tracker.c  bbr_transfer_tracker.h  windowed_filter.c  windowed_filter.h
cc/: Makefile  razor_api.c  razor_api.h  razor_callback.h  razor_log.c  razor_log.h  receiver_congestion_controller.c  receiver_congestion_controller.h  sender_congestion_controller.c  sender_congestion_controller.h
common/: Makefile  cf_crc32.c  cf_crc32.h  cf_hash_map.c  cf_hash_map.h  cf_hex.c  cf_hex.h  cf_list.c  cf_list.h  cf_mem_slab.c  cf_mem_slab.h  cf_object_pool.c  cf_object_pool.h  cf_platform.h  cf_skiplist.c  cf_skiplist.h  cf_stream.c  cf_stream.h  cf_unwrapper.c  cf_unwrapper.h
doc/: razor测试结果_0v1 .pptx
estimator/: Makefile  ack_bitrate_estimator.c  ack_bitrate_estimator.h  aimd_rate_control.c  aimd_rate_control.h  bitrate_controller.c  bitrate_controller.h  cc_feedback_adapter.c  cc_feedback_adapter.h  cc_loss_stat.c  cc_loss_stat.h  delay_base_bwe.c  delay_base_bwe.h  estimator_common.c  estimator_common.h  feedback_adapter.c  feedback_adapter.h  inter_arrival.c  inter_arrival.h  kalman_filter.c  kalman_filter.h  overuse_detector.c  overuse_detector.h  rate_stat.c  rate_stat.h  remote_bitrate_estimator.c  remote_bitrate_estimator.h  remote_estimator_proxy.c  remote_estimator_proxy.h  sender_bandwidth_estimator.c  sender_bandwidth_estimator.h  sender_history.c  sender_history.h  trendline.c  trendline.h
pacing/: Makefile  alr_detector.c  alr_detector.h  interval_budget.c  interval_budget.h  pace_sender.c  pace_sender.h  pacer_queue.c  pacer_queue.h
project/: razor.sln  razor.vcxproj  razor.vcxproj.filters
remb/: Makefile  remb_receiver.c  remb_receiver.h  (+2 more)
(+157 files in other folders)
